# tesor

./: .gitignore  pyproject.toml
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: HomePage.css  HomePage.jsx  MonitoredList.css  MonitoredList.jsx  OpportunityDetails.css  OpportunityDetails.jsx  OpportunityTable.css  OpportunityTable.jsx  Pagination.css  Pagination.jsx  SearchInput.css  SearchInput.jsx  SettingsModal.css  SettingsModal.jsx
frontend/src/utils/: timeUtils.js
src/: arbitrage_scanner.py  config.py  data_collector.py  data_models.py  main.py  market_data_service.py  utils.py  ws_endpoints.py
