[project]
name = "crypto-arbitrage-scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "Данил Витальевич"}
]
readme = "README.md"
requires-python = ">=3.13"
packages = [{include = "src"}]
dependencies = [
    "asyncio (>=3.4.3,<4.0.0)",
    "ccxt (>=4.4.78,<5.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "ccxtpro (>=1.0.1,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
